<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <TextView
        android:id="@+id/textView"
        android:layout_width="0dp"
        android:layout_height="150dp"
        android:fillViewport="true"
        android:gravity="center_vertical"
        android:scrollbarAlwaysDrawVerticalTrack="true"
        android:scrollbarSize="1dp"
        android:scrollbarStyle="insideInset"
        android:scrollbars="vertical"
        android:shadowColor="#fff"
        android:text="@string/textView"
        android:textColor="#000"
        android:verticalScrollbarPosition="right"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <LinearLayout
        android:id="@+id/linearLayout4"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView">

        <TextView
            android:id="@+id/Path"
            android:layout_width="135dp"
            android:layout_height="match_parent"
            android:gravity="center_vertical"
            android:shadowColor="#fff"
            android:text="@string/path"
            android:textColor="#000"
            android:textSize="15sp" />

        <EditText
            android:id="@+id/editText"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:inputType="text"
            android:shadowColor="#fff"
            android:textColor="#000" />

    </LinearLayout>

    <LinearLayout
        android:id="@+id/linearLayout3"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/linearLayout">

        <Button
            android:id="@+id/buttonHelp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:shadowColor="#fff"
            android:text="@string/help"
            android:textColor="#000"
            android:textSize="12sp" />

        <Button
            android:id="@+id/buttonLs"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:shadowColor="#fff"
            android:text="@string/ls"
            android:textColor="#000"
            android:textSize="12sp" />

        <Button
            android:id="@+id/buttonCd"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:shadowColor="#fff"
            android:text="@string/cd"
            android:textColor="#000"
            android:textSize="12sp" />

        <Button
            android:id="@+id/buttonOpen"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:shadowColor="#fff"
            android:text="@string/open"
            android:textColor="#000"
            android:textSize="12sp" />

        <Button
            android:id="@+id/buttonStart"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:shadowColor="#fff"
            android:text="@string/start"
            android:textColor="#000"
            android:textSize="12sp" />

        <Button
            android:id="@+id/buttonStop"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:shadowColor="#fff"
            android:text="@string/stop"
            android:textColor="#000"
            android:textSize="12sp" />

    </LinearLayout>

    <LinearLayout
        android:id="@+id/linearLayout"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/linearLayout4">

        <Button
            android:id="@+id/buttonDesktop"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:shadowColor="#fff"
            android:text="@string/desktop"
            android:textColor="#000"
            android:textSize="12sp" />

        <Button
            android:id="@+id/buttonDownloads"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:shadowColor="#fff"
            android:text="@string/downloads"
            android:textColor="#000"
            android:textSize="12sp" />

        <Button
            android:id="@+id/buttonDocuments"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:shadowColor="#fff"
            android:text="@string/documents"
            android:textColor="#000"
            android:textSize="12sp" />

        <Button
            android:id="@+id/buttonMusic"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:shadowColor="#fff"
            android:text="@string/music"
            android:textColor="#000"
            android:textSize="12sp" />
    </LinearLayout>

    <Button
        android:id="@+id/buttonEnter"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:shadowColor="#fff"
        android:text="@string/enter"
        android:textColor="#000"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/linearLayout3" />

    <Button
        android:id="@+id/buttonEscape"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:shadowColor="#fff"
        android:text="@string/escape"
        android:textColor="#000"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/buttonEnter" />

</androidx.constraintlayout.widget.ConstraintLayout>